# Hobbit

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
hozbot/: bot.py  config.py  main.py
hozbot/database/: engine.py
hozbot/dialogs/: dialogs.py  getters.py  selected.py  states.py  windows.py
hozbot/dialogs_admin/: dialogs.py  getters.py  selected.py  states.py  windows.py
hozbot/filters/: admin.py
hozbot/handlers/: admin.py  admin_panel.py  user.py  user_dialogs.py
hozbot/keybords/: dialog_keyboard.py  helper_menu.py
hozbot/lexicon/: lexicon_ru.py
hozbot/misc/: constants.py
hozbot/models/: birds_model.py  shop_model.py
hozbot/services/: repo.py
hozbot/services/dao/: base.py  birds_dao.py
migrations/: env.py
migrations/versions/: b4238cb4cfeb_initial_migration.py
