[tool.poetry]
name = "hozbot"
version = "0.1.0"
description = ""
authors = ["kirillkorablev <kirill.korablev.2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
aiogram-dialog = "^2.2.0"
pydantic-settings = "^2.5.2"
environs = "^11.0.0"
redis = "^5.1.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"
aiocache = "^0.12.3"
sqladmin = "^0.19.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
motor = "^3.6.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
